Fixed a tempo widget related crashing bug (reported by Jof Thibaut)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Version 0.2.7 (ONGOING):
+	* Fixed a tempo widget related crashing bug (reported by Jof Thibaut)
+
 Version 0.2.6 (2010-12-18):
 	* Fixed a timebase related bug that could crash Dino on startup
 
