Fixed a track widget related crashing bug (reported by Jof Thibaut)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 Version 0.2.7 (ONGOING):
+	* Fixed a track widget related crashing bug (reported by Jof Thibaut)
 	* Fixed Gtk warning about spinbutton adjustment settings (patch by
 	  Jof Thibaut)
 	* Fixed a tempo widget related crashing bug (reported by Jof Thibaut)
