Made the Controller properties dialog transient

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 Version 0.2.8 (ONGOING):
+	* Made the Controller properties dialog transient
 	* Fixed crashing bug that was triggered by clicking the empty CC editor
 	* Made About, Track properties and Pattern properties windows
 	  transient (patches by Nedko Arnaudov)
