Changed email address

--- a/README
+++ b/README
@@ -9,4 +9,4 @@ Branch_0_2 instead, or get the latest release from
 http://dino.nongnu.org.
 
 
-                               --Lars Luthman <lars.luthman@gmail.com>
+                               --Lars Luthman <mail@larsluthman.net>
