--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 Version 0.2.8 (2011-02-21):
+	* Added Ladish L1 support (patches by Nedko Arnaudov)
 	* Made the Controller properties dialog transient
 	* Fixed crashing bug that was triggered by clicking the empty CC editor
 	* Made About, Track properties and Pattern properties windows
